fix getProductList